# openenclave

./: CHANGELOG.md
.jenkins/: Jenkinsfile
docs/: LibcxxSupport.md
enclave/core/: CMakeLists.txt
pkgconfig/: CMakeLists.txt
src/jenkins/common/: Openenclave.groovy
tools/oesign/: CMakeLists.txt
